Fix links so they aren't cut off (in SCSS)

--- a/css/theme/source/sky.scss
+++ b/css/theme/source/sky.scss
@@ -29,6 +29,11 @@ $linkColor: #3b759e;
 $linkColorHover: lighten( $linkColor, 20% );
 $selectionBackgroundColor: #134674;
 
+// Fix links so they are not cut off
+.reveal a:not(.image) {
+	line-height: 1.3em;
+}
+
 // Background generator
 @mixin bodyBackground() {
 	@include radial-gradient( #add9e4, #f7fbfc );
